Identified timeline by CSS ID

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -4,7 +4,7 @@
 </p>
 
 <!-- This is an ordered list, as we present the items in order of reverse creation -->
-<ol>
+<ol id="timeline">
 <%= render_timeline @person.recent_events %>
 </ol>
 
