Added some markup for properly styling the public timeline

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -4,9 +4,12 @@
 </p>
 
 <!-- This is an ordered list, as we present the items in order of reverse creation -->
+<div id="timeline-wrapper">
+<h3>Public Timeline</h3>
 <ol id="timeline">
 <%= render_timeline @person.recent_events %>
 </ol>
+</div>
 
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
